2008-12-21  Adam Fedor  <fedor@gnu.org>

	* Version 0.16.0

2008-12-19  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/x11/XGServerEvent.m (check_modifier): Fix an issue where
	modifier key settings could be set incorrectly.

2008-12-19  Nicola Pero <nicola.pero@meta-innovation.com>

	* All GNUmakefiles: removed GNUSTEP_CORE_SOFTWARE=YES and
	added PACKAGE_NAME=gnustep-back.
	* GNUmakefile: Export PACKAGE_NAME to reduce chances of a problem
	if a GNUmakefile in a subdirectory is missing it.

2008-12-18  Nicola Pero <nicola.pero@meta-innovation.com>

	* All GNUmakefiles: added GNUSTEP_CORE_SOFTWARE=YES at the
	beginning.
	* GNUmakefile: Export GNUSTEP_CORE_SOFTWARE to reduce chances of a
	problem if a GNUmakefile in a subdirectory is missing it.

2008-12-17 Fred Kiefer <FredKiefer@gmx.de>

	* Source/winlib/WIN32FontInfo.m (-coveredCharacterSet): Set cbThis
	element of GLYPHSET structure before calling Windows funtion.

2008-12-17 Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/gpbs.m: Remove use of private method for connection keepalive.
	Keepalive is now enabled in base when necessary.

2008-12-15  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/x11/XGServerEvent.m (-processEvent:): Ignore
	_NET_STATE_WM property changes with Window Maker as it causes
	problems with hidden windows.
	Add a workaround for Window Maker so that unhidden windows
	correctly show their document edited status.

2008-12-11 Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/CairoContext.m (-GSDrawImage::): Correct test
	whether image conversion is needed.

2008-12-10  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/x11/XGServerEvent.m (-runLoopShouldBlock:): Add method to
	avoid blocking the run loop when the X event queue is not empty.

2008-12-02 Richard Frith-Macdonald <rfm@gnu.org>

	* GNUmakefile:
	* Fonts/GNUmakefile:
	* Tools/GNUmakefile:
	* Source/winlib/GNUmakefile:
	* Source/art/GNUmakefile:
	* Source/GNUmakefile:
	* Source/cairo/GNUmakefile:
	* Source/xlib/GNUmakefile: